Se quito el '~' de los links a archivos

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         gtag('config', 'UA-136398459-2');
     </script>
 
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
-    <link href="~/css/animate.min.css" rel="stylesheet" />
-    <link href="~/css/style.css" rel="stylesheet" />
-    <link href="~/color/default.css" rel="stylesheet" />
-    <link href="~/css/carrousel.min.css" rel="stylesheet" />
+    <link href="/css/animate.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/color/default.css" rel="stylesheet" />
+    <link href="/css/carrousel.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="~/js/jquery.poptrox.min.js"></script>
+    <script src="/js/jquery.poptrox.min.js"></script>
     <script>
         $(function () {
             $('#gallery').poptrox({
@@ -119,7 +119,7 @@
                                 <h5 class="tituloservicio">Recepción</h5>
                                 <div class="avatar ">
                                     <a href="/FotoPopUp?id=1&mode=1" data-poptrox="iframe, 600x600">
-                                        <img id="FotoRecepcion" src="~/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoRecepcion" src="/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                                 <h5 class="tituloservicio">Habitaciones</h5>
                                 <div class="avatar">
                                     <a href="/FotoPopUp?id=2&mode=1" data-poptrox="iframe, 600x600">
-                                        <img id="FotoHabitaciones" src="~/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoHabitaciones" src="/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
 
@@ -148,7 +148,7 @@
                                 <h5 class="tituloservicio">Entretenimento</h5>
                                 <div class="avatar">
                                     <a href="/FotoPopUp?id=3&mode=1" data-poptrox="iframe, 600x600">
-                                        <img id="FotoEntretenimento" src="~/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoEntretenimento" src="/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
 
@@ -163,7 +163,7 @@
                                 <h5 class="tituloservicio">Comidas</h5>
                                 <div class="avatar">
                                     <a href="/FotoPopUp?id=4&mode=1" data-poptrox="iframe, 600x600">
-                                        <img id="FotoComidas" src="~/img/team/4_opt.jpg" class="img-responsive img-circle" />
+                                        <img id="FotoComidas" src="/img/team/4_opt.jpg" class="img-responsive img-circle" />
                                     </a>
                                 </div>
 
@@ -186,7 +186,7 @@
                                 <h5>Recepción</h5>
                                 <div class="avatar">
                                     <a href="/FotoPopUp?id=1">
-                                        <img id="FotoRecepcion" src="~/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoRecepcion" src="/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                                 <h5>Habitaciones</h5>
                                 <div class="avatar ">
                                     <a href="/FotoPopUp?id=2">
-                                        <img id="FotoHabitaciones" src="~/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoHabitaciones" src="/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                                 <h5>Entretenimento</h5>
                                 <div class="avatar">
                                     <a href="/FotoPopUp?id=3">
-                                        <img id="FotoEntretenimento" src="~/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
+                                        <img id="FotoEntretenimento" src="/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
 
@@ -229,7 +229,7 @@
                                 <h5>Comidas</h5>
                                 <div class="avatar">
                                     <a id="FotoComidas" href="/FotoPopUp?id=4">
-                                        <img src="~/img/team/4_opt.jpg" class="img-responsive img-circle" />
+                                        <img src="/img/team/4_opt.jpg" class="img-responsive img-circle" />
                                     </a>
                                 </div>
 
@@ -385,22 +385,22 @@
                         <strong>Nuestras redes sociales</strong><br>
                         <div class="container-social">
                             <a href="https://www.facebook.com/hosteriaguaiteka.caviahue" target="_blank">
-                                <img class="icon-social" src="~/img/facebook-logo.png" />
+                                <img class="icon-social" src="/img/facebook-logo.png" />
                             </a>
                             <a href="https://www.instagram.com/copahue/" target="_blank">
-                                <img class="icon-social" src="~/img/instagram.png" />
+                                <img class="icon-social" src="/img/instagram.png" />
                             </a>
                             <a href="https://twitter.com/valledelvolcan" target="_blank">
-                                <img class="icon-social" src="~/img/simbolo-de-twitter.png" />
+                                <img class="icon-social" src="/img/simbolo-de-twitter.png" />
                             </a>
                             <a href="https://ar.pinterest.com/copahueclub/" target="_blank">
-                                <img class="icon-social" src="~/img/pinterest-sign.png" />
+                                <img class="icon-social" src="/img/pinterest-sign.png" />
                             </a>
                             <a href="https://www.youtube.com/channel/UC4dWztolwZBEBTIS7xqgEiw" target="_blank">
-                                <img class="icon-social" src="~/img/youtube.png" />
+                                <img class="icon-social" src="/img/youtube.png" />
                             </a>
                             <a href="https://api.whatsapp.com/send?phone=5491122578646" target="_blank">
-                                <img class="icon-social" src="~/img/whatsapp-logo.png" />
+                                <img class="icon-social" src="/img/whatsapp-logo.png" />
                             </a>
                         </div>
                     </address>
@@ -432,11 +432,11 @@
         </div>
     </footer>
 
-    <script src="~/js/bootstrap.min.js"></script>
-    <script src="~/js/jquery.easing.min.js"></script>
-    <script src="~/js/jquery.scrollTo.js"></script>
-    <script src="~/js/wow.min.js"></script>
-    <script src="~/js/custom.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/jquery.scrollTo.js"></script>
+    <script src="/js/wow.min.js"></script>
+    <script src="/js/custom.min.js"></script>
 
 </body>
 
