--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </a>
         </div>
     </section>
-</section id="service" class="home-section text-center bg-cremita">
+<section id="service" class="home-section text-center bg-cremita">
     <div id="gallery">
         <div class="heading-about">
             <div class="container">
