Se agregaron archivos de cada Servicio para los popup

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="inner">
                                 <h5 class="tituloservicio">Recepción</h5>
                                 <div class="avatar ">
-                                    <a href="/FotoPopUp?id=1&mode=1" data-poptrox="iframe, 600x600">
+                                    <a href="/popup/desktop/recepcion.html" data-poptrox="iframe, 600x600">
                                         <img id="FotoRecepcion" src="/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -132,7 +132,7 @@
                             <div class="inner">
                                 <h5 class="tituloservicio">Habitaciones</h5>
                                 <div class="avatar">
-                                    <a href="/FotoPopUp?id=2&mode=1" data-poptrox="iframe, 600x600">
+                                    <a href="/popup/desktop/habitaciones.html" data-poptrox="iframe, 600x600">
                                         <img id="FotoHabitaciones" src="/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -147,7 +147,7 @@
                             <div class="inner">
                                 <h5 class="tituloservicio">Entretenimento</h5>
                                 <div class="avatar">
-                                    <a href="/FotoPopUp?id=3&mode=1" data-poptrox="iframe, 600x600">
+                                    <a href="/popup/desktop/entretenimiento.html" data-poptrox="iframe, 600x600">
                                         <img id="FotoEntretenimento" src="/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -162,7 +162,7 @@
                             <div class="inner">
                                 <h5 class="tituloservicio">Comidas</h5>
                                 <div class="avatar">
-                                    <a href="/FotoPopUp?id=4&mode=1" data-poptrox="iframe, 600x600">
+                                    <a href="/popup/desktop/comida.html" data-poptrox="iframe, 600x600">
                                         <img id="FotoComidas" src="/img/team/4_opt.jpg" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -185,7 +185,7 @@
                             <div class="inner">
                                 <h5>Recepción</h5>
                                 <div class="avatar">
-                                    <a href="/FotoPopUp?id=1">
+                                    <a href="/popup/mobile/recepcion.html">
                                         <img id="FotoRecepcion" src="/img/team/9_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -199,7 +199,7 @@
                             <div class="inner">
                                 <h5>Habitaciones</h5>
                                 <div class="avatar ">
-                                    <a href="/FotoPopUp?id=2">
+                                    <a href="/popup/mobile/habitaciones.html">
                                         <img id="FotoHabitaciones" src="/img/team/2_2_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -213,7 +213,7 @@
                             <div class="inner">
                                 <h5>Entretenimento</h5>
                                 <div class="avatar">
-                                    <a href="/FotoPopUp?id=3">
+                                    <a href="/popup/mobile/entretenimiento.html">
                                         <img id="FotoEntretenimento" src="/img/team/11_opt.jpg" alt="" class="img-responsive img-circle" />
                                     </a>
                                 </div>
@@ -228,7 +228,7 @@
                             <div class="inner">
                                 <h5>Comidas</h5>
                                 <div class="avatar">
-                                    <a id="FotoComidas" href="/FotoPopUp?id=4">
+                                    <a id="FotoComidas" href="/popup/mobile/comida.html">
                                         <img src="/img/team/4_opt.jpg" class="img-responsive img-circle" />
                                     </a>
                                 </div>
