Se agrego modal con Aviso

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         gtag('config', 'UA-136398459-2');
     </script>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
-    <link href="/css/animate.min.css" rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet" />
-    <link href="/color/default.css" rel="stylesheet" />
-    <link href="/css/carrousel.min.css" rel="stylesheet" />
+    <link href="css/animate.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="color/default.css" rel="stylesheet" />
+    <link href="css/carrousel.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/js/jquery.poptrox.min.js"></script>
+    <script src="js/jquery.poptrox.min.js"></script>
     <script>
         $(function () {
             $('#gallery').poptrox({
@@ -431,12 +431,32 @@
             </div>
         </div>
     </footer>
-
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.easing.min.js"></script>
-    <script src="/js/jquery.scrollTo.js"></script>
-    <script src="/js/wow.min.js"></script>
-    <script src="/js/custom.min.js"></script>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Aviso!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                    Informamos que a partir del 1 de septiembre comenzamos a tomar reservas para la temporada termal al mejor precio.
+                    Nuestra oficina virtual y comercial de reservas se encontrara cerrada hasta dicha fecha.
+                    Gracias
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.scrollTo.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/custom.min.js"></script>
 
 </body>
 
