--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         </div>
     </footer>
     <!-- Modal -->
-    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -479,7 +479,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.scrollTo.js"></script>
