cambio numero de telefono

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="row">
                 <div class="col-lg-2 col-lg-offset-5">
                     <hr class="marginbot-50">
-                    <lable>Departamento de reservas 011 4322 0912</lable>
+                    <lable>Departamento de reservas +54 9 1122578686</lable>
 
                 </div>
             </div>
